--- a/index2.html
+++ b/index2.html
@@ -10,7 +10,7 @@
     <div class="main">
       <form action="" method="POST" class="form" id="form-1">
         <h3 class="heading">Thành viên đăng ký</h3>
-        <p class="desc">Cùng nhau học lập trình miễn phí tại F8</p>
+        <p class="desc">Cùng nhau học lập trình miễn phí tại 8</p>
 
         <div class="spacer"></div>
 
